--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-preset-react": "^6.24.1",
+    "font-awesome": "^4.7.0",
+    "leaflet": "^1.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
