--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "babel-preset-react": "^6.24.1",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-google": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
+    "react-leaflet-draw": "^0.19.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
