--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-leaflet-draw": "^0.19.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-spinners": "^0.10.6",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
