--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 node_modules
+.env 
+.venv 
+env/ 
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+.vscode/* 
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history
